--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,10 @@ div{
     padding: 10px;
     margin: 10px;
 }
+p{
+    font-size: 20px;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    width: 50%;
+}
